<resources>
    <string name="app_name">FHE Assigner</string>
    <string name="text_view_name">Name:</string>
    <string name="email_notify">Notify by email</string>
    <string name="sms_notify">Notify by SMS</string>
    <string name="include_as_participant">Participating:</string>
    <string name="participating_once">Just this week</string>
    <string name="participating_weekly">Weekly</string>
    <string name="participating_not">No</string>
    <string name="contact_email">Email:</string>
    <string name="contact_number">Phone:</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="spinner_difficulty">Difficulty:</string>
    <string name="drawer_open">Open Navigation Menu</string>
    <string name="drawer_close">Close Navigation Menu</string>
    <string name="main_menu_participants">Edit Participants</string>
    <string name="main_menu_assignments">Edit Assignments</string>
    <string name="save_successful"> was saved</string>
    <string name="save_unsuccessful">Nothing was saved</string>
    <string name="error_toast">Error: </string>
    <string name="file_not_found">File Not Found</string>
    <string name="generic_error">An error has occurred</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="nav_menu_array">
        <item>Home</item>
        <item>Assignments</item>
        <item>People</item>
    </string-array>

</resources>
