<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fheassigner.com.fheassigner.NewPersonActivity">

    <ImageView
        android:id="@+id/new_person_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/info_grid_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/new_person_image"
        app:layout_constraintRight_toRightOf="@+id/new_person_image">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/camera_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/white_camera"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/images_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/image_icon_white"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/info_grid_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:useDefaultMargins="false"
        android:layout_margin="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_person_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0"
            android:text="@string/text_view_name"/>
        <EditText
            android:id="@+id/new_person_name"
            android:inputType="text"
            android:layout_columnWeight="1"
            android:layout_margin="0dp"
            android:padding="5dp"
            android:layout_width="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0"
            android:text="@string/contact_email"/>
        <EditText
            android:id="@+id/new_person_email"
            android:inputType="textEmailAddress"
            android:layout_columnWeight="1"
            android:layout_margin="0dp"
            android:padding="5dp"
            android:layout_width="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0"
            android:text="@string/contact_number"/>
        <EditText
            android:id="@+id/new_person_phone"
            android:inputType="phone"
            android:layout_columnWeight="1"
            android:layout_margin="0dp"
            android:padding="5dp"
            android:layout_width="match_parent"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info_grid_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <CheckBox
            android:id="@+id/notify_email_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_notify"
            tools:layout_editor_absoluteY="97dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_grid_layout"/>

        <CheckBox
            android:id="@+id/notify_sms_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_notify"
            tools:layout_editor_absoluteY="97dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/new_person_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/new_person_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
